Mon Feb 25 15:53:26 UTC 2013  Adam Mitz  <mitza@ociweb.com>

        * tests/DCPS/ManyTopicTest/DataReaderListener.h:
        * tests/DCPS/ManyTopicTest/DataReaderListener.cpp:
        * tests/DCPS/ManyTopicTest/DataReaderListener1.h:
        * tests/DCPS/ManyTopicTest/DataReaderListener1.cpp:
        * tests/DCPS/ManyTopicTest/DataReaderListener2.h:
        * tests/DCPS/ManyTopicTest/DataReaderListener2.cpp:
        * tests/DCPS/ManyTopicTest/DataReaderListener3.h:
        * tests/DCPS/ManyTopicTest/DataReaderListener3.cpp:
        * tests/DCPS/ManyTopicTest/common.h:
        * tests/DCPS/ManyTopicTest/publisher.cpp:
        * tests/DCPS/ManyTopicTest/subscriber.cpp:

          Fixed warnings.

Sun Feb 24 20:16:21 UTC 2013  Johnny Willemsen  <jwillemsen@remedy.nl>

        * dds/idl/IDLTemplate.txt:
          Also when compiling the type support with something other
          than tao_idl, use the sequence definition

Fri Feb 22 20:16:37 UTC 2013  Adam Mitz  <mitza@ociweb.com>

        * bin/dcps_tests.lst:
        * tests/DCPS/ManyTopicTest/ManyTopicTest.mpc:
        * tests/DCPS/ManyTopicTest/Writer.cpp:
        * tests/DCPS/ManyTopicTest/common.h:
        * tests/DCPS/ManyTopicTest/publisher.cpp:
        * tests/DCPS/ManyTopicTest/rtps_disc.ini:
        * tests/DCPS/ManyTopicTest/run_test.pl:
        * tests/DCPS/ManyTopicTest/run_test1.pl:
        * tests/DCPS/ManyTopicTest/run_test2.pl:
        * tests/DCPS/ManyTopicTest/run_test3.pl:
        * tests/DCPS/ManyTopicTest/subscriber.cpp:

          Re-enable this test, add a fourth topic, and allow RTPS.
          This can be used as a regression for the bug fixed yesterday.

Fri Feb 22 00:01:59 UTC 2013  Adam Mitz  <mitza@ociweb.com>

        * dds/DCPS/AssociationData.h:
        * dds/DCPS/DataReaderImpl.cpp:
        * dds/DCPS/DataWriterImpl.cpp:
        * dds/DCPS/RTPS/Sedp.cpp:
        * dds/DCPS/RecorderImpl.cpp:
        * dds/DCPS/ReplayerImpl.cpp: