@@ -1,4 +1,4 @@
-project(ManyTopicTestPublisher): dcpsexe, dds_model {
+project(ManyTopicTestPublisher): dcpsexe_with_tcp, dcps_rtps_udp, dds_model {
   exename   = publisher
   libpaths += ../ManyTopicTypes
   libpaths += ../common
@@ -16,7 +16,7 @@ project(ManyTopicTestPublisher): dcpsexe, dds_model {
 }
 
 
-project(ManyTopicTestSubscriber): dcpsexe {
+project(ManyTopicTestSubscriber): dcpsexe_with_tcp, dcps_rtps_udp {
   exename   = subscriber
   libpaths += ../ManyTopicTypes
   libpaths += ../common
