@@ -25,6 +25,12 @@
 #include "tests/DCPS/ManyTopicTypes/Foo3DefTypeSupportImpl.h"
 #include "dds/DCPS/transport/framework/EntryExit.h"
 
+#include "dds/DCPS/StaticIncludes.h"
+#ifdef ACE_AS_STATIC_LIBS
+#include "dds/DCPS/RTPS/RtpsDiscovery.h"
+#include "dds/DCPS/transport/rtps_udp/RtpsUdp.h"
+#endif
+
 #include "ace/Arg_Shifter.h"
 
 #include "common.h"
